--- a/test-project-Net/Pages/Shared/_Layout.cshtml
+++ b/test-project-Net/Pages/Shared/_Layout.cshtml
@@ -21,9 +21,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
+              
                     </ul>
                 </div>
             </div>
@@ -37,8 +35,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - test_project_Net - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
+            &copy; 2021 - test_project_Net 
+            </div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
